# ml-study

./: .gitignore  .gitmodules  run_jupyter.sh
deepcircus/: .gitignore  AGENTS.md  CMakeLists.txt  diary.md  gen.cpp  gen.h  main.cpp  pyproject.toml  runs.md  solution.cpp  solution.h
deepcircus/conf/: bitness.conf  depth.conf
deepcircus/experiments/: bitness.py  config.py  dataloader.py  experiment_depth.py  experiment_pooling.py  generator.py  generator_proxy.py  model.py  sampler.py  state_io.py
deepcircus/generator/: CMakeLists.txt  decision_tree.cpp  decision_tree.h  generator.cpp  generator.h  generator.py  small_bitness.cpp  small_bitness.h
deepcircus/scripts/: build_generator.sh  inspect.py  plot_metrics.py  plot_pooling_metrics.py  run.py  test_generator.py
deepcube/: .gitignore  AGENTS.md  build_native.sh  costtogo.cpp  costtogo.hpp  costtogo.py  cube3.py  n_puzzle.py  plot_ctg.py  puzzle.py  puzzle_factory.py  pyproject.toml  search_a_star.py  state_io.py  test_cube3.py  test_puzzle_solver.py  train_costtogo.py
deepcube/daemon/: __init__.py  client.py  protocol.py  worker.cpp  worker.py
deepcube/puzzle/: __init__.py  cube3.py  environment.cpp  environment.hpp  n_puzzle.py  puzzle.py
deepcube/search/: a_star.cpp  a_star.hpp  a_star.py
magnitude/paper/: appendix.tex  main.bbl  main.tex  neurips_2023.tex
ml-handbook/: 01_solution.py  1.3_01_solution_b.py  autohw_intro_ML_draft.ipynb
ml-handbook/1.3/: 02_soluition_a.py  02_soluition_b.py  02_soluition_c.py  05_solution.py  06_solution.py  07_solution.py  08_solution.py  autohw_intro_ML_draft.ipynb  autohw_intro_ML_original.ipynb
ml-handbook/2.2/: 01_solution.py  autohw_linear_models_draft.ipynb  autohw_linear_models_original.ipynb  solution_02.py  solution_02_test.py  solution_03.py  solution_06.py  solution_07.py  solution_07_test.py
old_cpp_experiments/: CMakeLists.txt  Case.cpp  Case.h  Plotter.cpp  Plotter.h  main.cpp  run_jupyter.sh  utilities.cpp  utilities.h  wallace.cpp  wallace.h
old_cpp_experiments/math/: activation_functions.cpp  activation_functions.h  metrics.cpp  metrics.h
old_cpp_experiments/network/: Network.cpp  Network.h  Neuron.cpp  Neuron.h  Training.cpp  Training.h  Weights.cpp  Weights.h
old_cpp_experiments/outlines/: .jupytext.toml  00_2bits_and.ipynb  01_approximation_with_sigmoids.ipynb
old_cpp_experiments/results/: 5sigmoid.txt  5tanh.txt  random_coefficients_mse.txt
old_cpp_experiments/schemes/: 5sigmoid.txt  5tanh.txt  9sigmoid.txt
outlines/: 00_2bits_and.ipynb
