[project]
name = "deepcube"
version = "0.1.0"
description = "Minimal infrastructure for reproducing DeepCubeA experiments."
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "mojo>=0.26.2.0",
    "numpy>=2.4.6",
    "torch>=2.0",
    "tqdm>=4.68.1",
]

[tool.uv]
package = false
